--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "axios": "^1.2.5",
     "bootstrap": "^5.2.3",
+    "date-fns": "^2.29.3",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-input-mask": "^2.0.4",
     "react-paginate": "^8.1.4",
-    "react-router-dom": "^6.8.0"
+    "react-router-dom": "^6.8.0",
+    "sweetalert2": "^11.7.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
